Update video page

--- a/about/index.html
+++ b/about/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html id="top" lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="theme-color" content="#161D2C" />
     <title>About | Tannaz Sadeghi</title>
@@ -11,129 +11,137 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/about.css">
-    <link rel="icon" type="image/png" href="../assets/favicon.png"/>
+    <link rel="icon" type="image/png" href="../assets/favicon.png" />
 </head>
+
 <body>
 
-<nav id="nav">
-    <div class="nav-content">
-        <div class="tannaz-image">
-            <a href="..">
-                <img src="../assets/tannaz-nav.png"/>
-            </a>
+    <nav id="nav">
+        <div class="nav-content">
+            <div class="tannaz-image">
+                <a href="..">
+                    <img src="../assets/tannaz-nav.png" />
+                </a>
+            </div>
+            <ul class="menu">
+                <li><a href="..">Works</a></li>
+                <li class="active"><a href=".">About</a></li>
+                <li><a href="../resume/TannazSadeghi-Resume.pdf" target="_blank">Resume</a> </li>
+            </ul>
         </div>
-        <ul class="menu">
-            <li><a href="..">Works</a></li>
-            <li class="active"><a href=".">About</a></li>
-            <li><a href="../resume/TannazSadeghi-Resume.pdf" target="_blank">Resume</a> </li>
-        </ul>
-    </div>
-</nav>
+    </nav>
 
-<main class="main">
-    <header class="about-header">
-        <div class="about-content">
-            <h1>Always learning, growing, and pushing</h1>
-            <p>I’m Tannaz, a product designer based in Iran, currently working at Cafe Bazaar, designing the video's experience and everything in-between.
-            </p>
-            <br/>
-            <p>
-                I am a self-motivated designer who is always looking for new challenges and opportunities that can help
-                me continue to develop and grow as a designer.
-            </p>
-            <br/>
-            <p>
-                I’m eager to learn new skills and to push my boundaries through experimentation and exploration based on
-                user research and working alongside hardworking, inspiring, and experienced people in the industry.
-            </p>
+    <main class="main">
+        <header class="about-header">
+            <div class="about-content">
+                <h1>Always learning, growing, and pushing</h1>
+                <p>I’m Tannaz, a product designer based in Iran, currently working at Cafe Bazaar, designing the video's experience and everything in-between.
+                </p>
+                <br/>
+                <p>
+                    I am a self-motivated designer who is always looking for new challenges and opportunities that can help me continue to develop and grow as a designer.
+                </p>
+                <br/>
+                <p>
+                    I’m eager to learn new skills and to push my boundaries through experimentation and exploration based on user research and working alongside hardworking, inspiring, and experienced people in the industry.
+                </p>
+            </div>
+            <div class="tannaz-real">
+                <img src="../assets/tannaz-real.png" id="portrait" alt="Tannaz Real" />
+            </div>
+        </header>
+        <div class="content">
+            <article class="experience">
+                <h2>Experience</h2>
+                <section>
+                    <p>Product Designer</p>
+                    <h3>
+                        <a href="https://cafebazaar.ir/?l=en" target="_blank">Cafe Bazaar</a>
+                    </h3>
+                    <p>February 2021 - Present | Tehran, Iran</p>
+                    <ul class="resume">
+                        <li>Overhauled the Video service to create a seamless experience aligned with other services of the app.</li>
+                        <li>Redesigned the Video Player and made accessibility a priority.</li>
+                        <li>Designed a feature to integrate the biggest video streaming service, Filimo, into Bazaar.</li>
+                        <li>Added the ability to allow users to request apps that weren't on Bazaar to reduce churn rate in the search funnel.</li>
+                        <li>Redesigned the Profile page, adjusted its information architecture, and made the wallet and payment feature more visible and accessible.</li>
+                        <li>Designed a Note Taking app to be used as a take home assignment in the hiring process for Android Team.</li>
+                        <li>Created a number of design components in our design system that were used throughout the application such as Search Lists and Spotlight, a row of promotional apps and games.</li>
+                    </ul>
+                </section>
+                <section>
+                    <p>Product Designer</p>
+                    <h3>
+                        <a href="https://snapp.ir/about" target="_blank">Snapp!</a>
+                    </h3>
+                    <p>September 2019 - February 2021 | Tehran, Iran</p>
+                    <ul class="resume">
+                        <li>Conducted usability tests, A/B tests and user interviews to understand user needs and effectiveness of product and iterated based on the results.</li>
+                        <li>Checked Call Center’s user problems sheet alongside product managers to gather what users wanted and came up with solutions for the product roadmap.</li>
+                        <li>Documented and maintained the Design System for Snapp! products.</li>
+                        <li>Participated in the Passenger redesign project by enhancing the experience, interface, and helping developers with animations and prototypes.</li>
+                        <li>Designed Change Destination feature in passenger app which resulted in a 2% reduction in daily Call Center calls.</li>
+                        <li>Revamped the login flow of the app which increased acquisition by 12%.</li>
+                        <li>Redesigned the Corporate Panel, which led to increase B2B usage by 15%.</li>
+                        <li>Dropped ride cancellation rate by repositioning cancel button by 1%.</li>
+                    </ul>
+                </section>
+                <section>
+                    <p>Product Designer</p>
+                    <h3>
+                        <a href="http://www.hamisystem.ir/?locale=en" target="_blank">Hami System Sharif</a>
+                    </h3>
+                    <p>July 2018 - August 2019 | Tehran, Iran </p>
+                    <ul class="resume">
+                        <li>Designed and prototyped a completely new UI for Hamrah-e-Avval’s App.</li>
+                        <!-- <li>Designed the flows and interfaces for the website, application, and panel of the Central Security Depository of Iran (CSDI) through analysis, iteration and working directly with PMs.</li> -->
+                    </ul>
+                </section>
+                <section>
+                    <p>Freelance Designer</p>
+                    <h3>
+                        Different Clients
+                    </h3>
+                    <p>April 2016 - August 2018 | Tehran, Iran </p>
+                    <ul class="resume">
+                        <li>Designed websites, book covers, posters, and brochures for a variety of clients.</li>
+                    </ul>
+                </section>
+            </article>
+            <article class="education">
+                <h2>Education</h2>
+                <section>
+                    <p>Azad University <br/> Central Tehran Branch</p>
+                    <h3>Bachelor’s Degree, <br/> Graphic Design</h3>
+                    <p>2013 - 2017 | Tehran, Iran</p>
+                </section>
+            </article>
         </div>
-        <div class="tannaz-real">
-            <img src="../assets/tannaz-real.png" id="portrait" alt="Tannaz Real"/>
-        </div>
-    </header>
-    <div class="content">
-        <article class="experience">
-            <h2>Experience</h2>
-            <section>
-                <p>Product Designer</p>
-                <h3>
-                    <a href="https://cafebazaar.ir/?l=en" target="_blank">Cafe Bazaar</a>
-                </h3>
-                <p>February 2021 - Present | Tehran, Iran</p>
-                <ul class="resume">
-                    <li>Overhauled the Video service to create a seamless experience aligned with other services of the app.</li>
-                    <li>Redesigned the Video Player and made accessibility a priority.</li>
-                    <li>Designed a feature to integrate the biggest video streaming service, Filimo, into Bazaar.</li>
-                    <li>Added the ability to allow users to request apps that weren't on Bazaar to reduce churn rate in the search funnel.</li>
-                    <li>Redesigned the Profile page, adjusted its information architecture, and made the wallet and payment feature more visible and accessible.</li>
-                    <li>Designed a Note Taking app to be used as a take home assignment in the hiring process for Android Team.</li>
-                    <li>Created a number of design components in our design system that were used throughout the application such as Search Lists and Spotlight, a row of promotional apps and games.</li>
-                </ul>
-            </section>
-            <section>
-                <p>Product Designer</p>
-                <h3>
-                    <a href="https://snapp.ir/about" target="_blank">Snapp!</a>
-                </h3>
-                <p>September 2019 - February 2021 | Tehran, Iran</p>
-                <ul class="resume">
-                    <li>Conducted usability tests, A/B tests and user interviews to understand user needs and effectiveness of product and iterated based on the results.</li>
-                    <li>Checked Call Center’s user problems sheet alongside product managers to gather what users wanted and came up with solutions for the product roadmap.</li>
-                    <li>Documented and maintained the Design System for Snapp! products.</li>
-                    <li>Participated in the Passenger redesign project by enhancing the experience, interface, and helping developers with animations and prototypes.</li>
-                    <li>Designed Change Destination feature in passenger app which resulted in a 2% reduction in daily Call Center calls.</li>
-                    <li>Revamped the login flow of the app which increased acquisition by 12%.</li>
-                    <li>Redesigned the Corporate Panel, which led to increase B2B usage by 15%.</li>
-                    <li>Dropped ride cancellation rate by repositioning cancel button by 1%.</li>
-                </ul>
-            </section>
-            <section>
-                <p>Product Designer</p>
-                <h3>
-                    <a href="http://www.hamisystem.ir/?locale=en" target="_blank">Hami System Sharif</a>
-                </h3>
-                <p>July 2018 - August 2019 | Tehran, Iran </p>
-                <ul class="resume">
-                    <li>Designed and prototyped a completely new UI for Hamrah-e-Avval’s App.</li>
-                    <li>Designed the flows and interfaces for the website, application, and panel of the Central Security Depository of Iran (CSDI) through analysis, iteration and working directly with PMs.</li>
-                </ul>
-            </section>
-        </article>
-        <article class="education">
-            <h2>Education</h2>
-            <section>
-                <p>Azad University <br/>
-                    Central Tehran Branch</p>
-                <h3>Bachelor’s Degree, <br/>
-                    Graphic Design</h3>
-                <p>2013 - 2017 | Tehran, Iran</p>
-            </section>
-        </article>
-    </div>
-</main>
+    </main>
 
-<footer>
-    <div class="footer-content">
-        <div>© 2021 Tannaz Sadeghi</div>
-        <div class="padding"></div>
-        <div class="social">
-            <a href="mailto:tz.sadeghi95@gmail.com" target="_blank"><img src="../assets/icons/icon-mail.svg" alt="mail"/></a>
-            <a href="https://www.linkedin.com/in/tannazsadeghi/" target="_blank"><img src="../assets/icons/icon-linkedin.svg" alt="linkedin"/></a>
-            <a href="https://dribbble.com/tannazsadeghi" target="_blank"><img src="../assets/icons/icon-dribbble.svg" alt="dribble"/></a>
-            <a href="https://www.behance.net/tannazsadeghi" target="_blank"><img src="../assets/icons/icon-behance.svg" alt="behance"/></a>
-            <a href="https://www.instagram.com/tz.sadeghi/" target="_blank"><img src="../assets/icons/icon-instagram.svg" alt="instagram"/></a>
+    <footer>
+        <div class="footer-content">
+            <div>© 2021 Tannaz Sadeghi</div>
+            <div class="padding"></div>
+            <div class="social">
+                <a href="mailto:tz.sadeghi95@gmail.com" target="_blank"><img src="../assets/icons/icon-mail.svg" alt="mail" /></a>
+                <a href="https://www.linkedin.com/in/tannazsadeghi/" target="_blank"><img src="../assets/icons/icon-linkedin.svg" alt="linkedin" /></a>
+                <a href="https://dribbble.com/tannazsadeghi" target="_blank"><img src="../assets/icons/icon-dribbble.svg" alt="dribble" /></a>
+                <a href="https://www.behance.net/tannazsadeghi" target="_blank"><img src="../assets/icons/icon-behance.svg" alt="behance" /></a>
+                <a href="https://www.instagram.com/tz.sadeghi/" target="_blank"><img src="../assets/icons/icon-instagram.svg" alt="instagram" /></a>
+            </div>
         </div>
-    </div>
-    <a class="top-link" href="#top">
-        <div class="arrow">
-            <div></div>
-            <div></div>
-        </div>
-        <div class="link">
-            Top
-        </div>
-    </a>
-</footer>
-<script src="../js/script.js"></script>
+        <a class="top-link" href="#top">
+            <div class="arrow">
+                <div></div>
+                <div></div>
+            </div>
+            <div class="link">
+                Top
+            </div>
+        </a>
+    </footer>
+    <script src="../js/script.js"></script>
 </body>
+
 </html>
