--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html id="top" lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="theme-color" content="#161D2C" />
     <title>Tannaz Sadeghi</title>
@@ -11,153 +11,154 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/home.css">
-    <link rel="icon" type="image/png" href="assets/favicon.png"/>
+    <link rel="icon" type="image/png" href="assets/favicon.png" />
 </head>
+
 <body>
 
-<nav id="nav">
-    <div class="nav-content">
-        <a id="tannaz-nav" href=".">
-            <img src="assets/tannaz-nav.png"/>
-        </a>
+    <nav id="nav">
+        <div class="nav-content">
+            <a id="tannaz-nav" href=".">
+                <img src="assets/tannaz-nav.png" />
+            </a>
 
-        <ul class="menu">
-            <li class="active"><a href=".">Works</a></li>
-            <li><a href="about">About</a></li>
-            <li><a href="resume/TannazSadeghi-Resume.pdf" target="_blank">Resume</a> </li>
-        </ul>
-    </div>
-</nav>
-
-<main class="main">
-    <header>
-        <div class="tannaz-image">
-            <img id="tannaz" src="assets/tannaz.gif"/>
+            <ul class="menu">
+                <li class="active"><a href=".">Works</a></li>
+                <li><a href="about">About</a></li>
+                <li><a href="resume/TannazSadeghi-Resume.pdf" target="_blank">Resume</a> </li>
+            </ul>
         </div>
-        <div>
-            <h1>Hello, I’m Tannaz!</h1>
-            <p>
-                A product designer based in Iran, currently working at Cafe Bazaar, designing the video’s experience and everything in-between.
-            </p>
-        </div>
-    </header>
+    </nav>
 
-    <article class="work-sample">
-        <a href="video" class="link">
-            <div class="image-box">
-                <img class="image-colored" src="assets/works/video-colored.png" alt="Video Photo"/>
-                <img class="image-gray" src="assets/works/video.png" alt="Video Photo"/>
-                <div class="hidden">
-                    <span></span>
-                    <img src="assets/works/video.png" alt="Video Photo"/>
-                    <span></span>
-                </div>
+    <main class="main">
+        <header>
+            <div class="tannaz-image">
+                <img id="tannaz" src="assets/tannaz.gif" />
             </div>
-            <div class="sample-title">
-                <h2>
-                    Cafe Bazaar Video Discovery and Player Redesign
-                </h2>
-                <div class="read-more">
-                    Read more
-                    <div class="arrow">
-                        <div></div>
-                        <div></div>
+            <div>
+                <h1>Hello, I’m Tannaz!</h1>
+                <p>
+                    A product designer based in Iran, currently working at Cafe Bazaar, designing the video’s experience and everything in-between.
+                </p>
+            </div>
+        </header>
+
+        <article class="work-sample">
+            <a href="video" class="link">
+                <div class="image-box">
+                    <img class="image-colored" src="assets/works/video-colored.png" alt="Video Photo" />
+                    <img class="image-gray" src="assets/works/video.png" alt="Video Photo" />
+                    <div class="hidden">
+                        <span></span>
+                        <img src="assets/works/video.png" alt="Video Photo" />
+                        <span></span>
                     </div>
                 </div>
-            </div>
-        </a>
-    </article>
-
-    <article class="work-sample">
-        <a href="chat" class="link">
-            <div class="image-box">
-                <img class="image-colored" src="assets/works/chat-colored.png" alt="Change Destination Photo"/>
-                <img class="image-gray" src="assets/works/chat.png" alt="Change Destination Photo"/>
-                <div class="hidden">
-                    <img src="assets/works/chat.png" alt="Change Destination Photo"/>
-                </div>
-            </div>
-            <div class="sample-title">
-                <h2>Snapp! Chat Module Feature</h2>
-                <div class="read-more">
-                    Read more
-                    <div class="arrow">
-                        <div></div>
-                        <div></div>
+                <div class="sample-title">
+                    <h2>
+                        Cafe Bazaar Video Discovery and Player Redesign
+                    </h2>
+                    <div class="read-more">
+                        Read more
+                        <div class="arrow">
+                            <div></div>
+                            <div></div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </a>
-    </article>
+            </a>
+        </article>
 
-
-    <article class="work-sample">
-        <a href="change-dest" class="link">
-            <div class="image-box">
-                <img class="image-colored" src="assets/works/change-dest-colored.png" alt="Change Destination Photo"/>
-                <img class="image-gray" src="assets/works/change-dest.png" alt="Change Destination Photo"/>
-                <div class="hidden">
-                    <img src="assets/works/change-dest.png" alt="Change Destination Photo"/>
-                </div>
-            </div>
-            <div class="sample-title">
-                <h2>Snapp! Change Destination Feature</h2>
-                <div class="read-more">
-                    Read more
-                    <div class="arrow">
-                        <div></div>
-                        <div></div>
+        <article class="work-sample">
+            <a href="change-dest" class="link">
+                <div class="image-box">
+                    <img class="image-colored" src="assets/works/change-dest-colored.png" alt="Change Destination Photo" />
+                    <img class="image-gray" src="assets/works/change-dest.png" alt="Change Destination Photo" />
+                    <div class="hidden">
+                        <img src="assets/works/change-dest.png" alt="Change Destination Photo" />
                     </div>
                 </div>
-            </div>
-        </a>
-    </article>
-
-    <article class="work-sample">
-        <a href="vouchers" class="link">
-            <div class="image-box">
-                <img class="image-colored" src="assets/works/vouchers-colored.png" alt="Change Destination Photo"/>
-                <img class="image-gray" src="assets/works/vouchers.png" alt="Change Destination Photo"/>
-                <div class="hidden">
-                    <img src="assets/works/vouchers.png" alt="Change Destination Photo"/>
-                </div>
-            </div>
-            <div class="sample-title">
-                <h2>Snapp! Voucher and Rewards Feature</h2>
-                <div class="read-more">
-                    Read more
-                    <div class="arrow">
-                        <div></div>
-                        <div></div>
+                <div class="sample-title">
+                    <h2>Snapp! Change Destination Feature</h2>
+                    <div class="read-more">
+                        Read more
+                        <div class="arrow">
+                            <div></div>
+                            <div></div>
+                        </div>
                     </div>
                 </div>
+            </a>
+        </article>
+
+        <article class="work-sample">
+            <a href="chat" class="link">
+                <div class="image-box">
+                    <img class="image-colored" src="assets/works/chat-colored.png" alt="Change Destination Photo" />
+                    <img class="image-gray" src="assets/works/chat.png" alt="Change Destination Photo" />
+                    <div class="hidden">
+                        <img src="assets/works/chat.png" alt="Change Destination Photo" />
+                    </div>
+                </div>
+                <div class="sample-title">
+                    <h2>Snapp! Chat Module Feature</h2>
+                    <div class="read-more">
+                        Read more
+                        <div class="arrow">
+                            <div></div>
+                            <div></div>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </article>
+
+        <article class="work-sample">
+            <a href="vouchers" class="link">
+                <div class="image-box">
+                    <img class="image-colored" src="assets/works/vouchers-colored.png" alt="Change Destination Photo" />
+                    <img class="image-gray" src="assets/works/vouchers.png" alt="Change Destination Photo" />
+                    <div class="hidden">
+                        <img src="assets/works/vouchers.png" alt="Change Destination Photo" />
+                    </div>
+                </div>
+                <div class="sample-title">
+                    <h2>Snapp! Voucher and Rewards Feature</h2>
+                    <div class="read-more">
+                        Read more
+                        <div class="arrow">
+                            <div></div>
+                            <div></div>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </article>
+    </main>
+
+    <footer>
+        <div class="footer-content">
+            <div>© 2021 Tannaz Sadeghi</div>
+            <div class="padding"></div>
+            <div class="social">
+                <a href="mailto:tz.sadeghi95@gmail.com" target="_blank"><img src="assets/icons/icon-mail.svg" alt="mail" /></a>
+                <a href="https://www.linkedin.com/in/tannazsadeghi/" target="_blank"><img src="assets/icons/icon-linkedin.svg" alt="linkedin" /></a>
+                <a href="https://dribbble.com/tannazsadeghi" target="_blank"><img src="assets/icons/icon-dribbble.svg" alt="dribble" /></a>
+                <a href="https://www.behance.net/tannazsadeghi" target="_blank"><img src="assets/icons/icon-behance.svg" alt="behance" /></a>
+                <a href="https://www.instagram.com/tz.sadeghi/" target="_blank"><img src="assets/icons/icon-instagram.svg" alt="instagram" /></a>
+            </div>
+        </div>
+        <a class="top-link" href="#top">
+            <div class="arrow">
+                <div></div>
+                <div></div>
+            </div>
+            <div class="link">
+                Top
             </div>
         </a>
-    </article>
-</main>
-
-<footer>
-    <div class="footer-content">
-        <div>© 2021 Tannaz Sadeghi</div>
-        <div class="padding"></div>
-        <div class="social">
-            <a href="mailto:tz.sadeghi95@gmail.com" target="_blank"><img src="assets/icons/icon-mail.svg" alt="mail"/></a>
-            <a href="https://www.linkedin.com/in/tannazsadeghi/" target="_blank"><img src="assets/icons/icon-linkedin.svg" alt="linkedin"/></a>
-            <a href="https://dribbble.com/tannazsadeghi" target="_blank"><img src="assets/icons/icon-dribbble.svg" alt="dribble"/></a>
-            <a href="https://www.behance.net/tannazsadeghi" target="_blank"><img src="assets/icons/icon-behance.svg" alt="behance"/></a>
-            <a href="https://www.instagram.com/tz.sadeghi/" target="_blank"><img src="assets/icons/icon-instagram.svg" alt="instagram"/></a>
-        </div>
-    </div>
-    <a class="top-link" href="#top">
-        <div class="arrow">
-            <div></div>
-            <div></div>
-        </div>
-        <div class="link">
-            Top
-        </div>
-    </a>
-</footer>
-<script src="js/script.js"></script>
+    </footer>
+    <script src="js/script.js"></script>
 </body>
+
 </html>
