--- a/vouchers/index.html
+++ b/vouchers/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html id="top" lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="theme-color" content="#161D2C" />
     <title>Vouchers | Tannaz Sadeghi</title>
@@ -11,159 +11,152 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/works.css">
-    <link rel="icon" type="image/png" href="../assets/favicon.png"/>
+    <link rel="icon" type="image/png" href="../assets/favicon.png" />
 </head>
+
 <body class="vouchers">
 
-<div class="work-container">
-    <div class="work-header">
-        <h1>Snapp! Voucher and
-            Rewards Feature
-        </h1>
-        <img src="../assets/vouchers/pic.png" alt="Voucher Header Picture" />
+    <div class="work-container">
+        <div class="work-header">
+            <h1>Snapp! Voucher and Rewards Feature
+            </h1>
+            <img src="../assets/vouchers/pic.png" alt="Voucher Header Picture" />
+        </div>
     </div>
-</div>
 
-<nav id="nav" class="background-green">
-    <div class="nav-content">
-        <div class="tannaz-image">
-            <a href="..">
-                <img src="../assets/tannaz-nav.png"/>
-            </a>
-        </div>
-        <ul class="menu">
-            <li><a href="..">Works</a></li>
-            <li><a href="../about">About</a></li>
-            <li><a href="../resume/TannazSadeghi-Resume.pdf" target="_blank">Resume</a> </li>
-        </ul>
-    </div>
-</nav>
-
-
-<main>
-    <article class="work-article padding-bottom-40">
-        <h2>Introduction</h2>
-        <p class="work-text">
-            Snapp! is known as the Uber of Iran with more than 2 million rides per day and 30 million users.
-            The company is the largest and fastest growing internet company in the Middle East.
-            <br/>
-            <br/>
-            Missions were added to Snapp to reduce the cost of retention campaigns, enhance engagement, and increase the usage of our product.
-        </p>
-    </article>
-    <div class="back-gray">
-        <article class="work-article">
-            <h2>Problem Statement</h2>
-            <p class="work-text">In the Coronavirus pandemic, our ride requests plummeted down so much that we couldn’t
-                give away the normal vouchers like we used to because of the cost for the company. Aside from the cost,
-                they wouldn’t bring loyalty and engagement from our users, so we had to make more efficient vouchers.
-            </p>
-        </article>
-        <div class="work-image">
-            <img src="../assets/vouchers/icon-problem.svg" id="problem" alt="Problem Icon"/>
-        </div>
-    </div>
-    <div class="back-black padding-bottom-55">
-        <article class="work-article">
-            <h2>Solution</h2>
-            <p class="work-text-normal">We came up with three types of vouchers with gamification.
-            </p>
-            <br/>
-            <ul>
-                <li><strong>Target Based Vouchers</strong> <br/>
-                    A new type of conditional voucher that passengers must take rides with some conditions like service type, deadline time, etc. After meeting the target, the reward voucher code will be unlocked for the passenger and they can start using the code.
-                </li>
-                <br/>
-                <li><strong>Direct Discount Vouchers</strong> <br/>
-                    It’s an alternative for cashback functionality that passengers redeem a code and get the reward discount in their next ride directly.
-                </li>
-                <br>
-                <li><strong>Compound Vouchers</strong><br/>
-                    A promotion code with different discount values based on the time of code redemption.
-                </li>
-            </ul>
-
-        </article>
-    </div>
-    <div class="back-white padding-bottom-0">
-        <article class="work-article">
-            <h2>Final Designs</h2>
-            <p class="work-text-normal">
-                For the designs, since we had vouchers before, I tried to keep them as simple and similar to that of previous designs so it would seem familiar to the users.
-            </p>
-        </article>
-        <div class="work-image-normal margin-top-29">
-            <img src="../assets/vouchers/target-based.png" alt="Target Based Vouchers"/>
-        </div>
-        <div class="work-image-normal margin-top-0">
-            <img src="../assets/vouchers/direct-discount.png" alt="Direct Discount Vouchers"/>
-        </div>
-        <div class="work-image-normal margin-top-0">
-            <img src="../assets/vouchers/compound.png" alt="Compound Vouchers"/>
-        </div>
-        <div class="work-image-normal margin-top-0">
-            <img src="../assets/vouchers/empty.png" alt="Empty State"/>
-        </div>
-    </div>
-    <div class="back-white padding-bottom-49">
-        <article class="work-article last-work-article">
-            <h2>Results</h2>
-            <p class="work-text-normal">
-                Based on our A/B tests, these mission-type vouchers have reduced the cost of the normal vouchers, and it has increased the conversion rate.
-                <br/> <br/>
-                Also, they brought back the daily rides count to its value before the pandemic and increased retention.
-                <br /><br />
-                We ran a survey after releasing these vouchers the results showed that a good number of users copy the
-                voucher code from their SMS messages. To fix this issue we’re planning to bring the missions in our
-                Loyalty Club, and place a button in the checkout funnel to show active voucher codes from there. <br />
-            </p>
-        </article>
-    </div>
-    <div class="pagination">
-        <div class="pagination-content">
-            <a class="prev-page" href="../change-dest">
-                <div class="arrow">
-                    <div></div>
-                    <div></div>
-                </div>
-                Snapp! Change Destination Feature
-            </a>
-
-            <div class="padding">
+    <nav id="nav" class="background-green">
+        <div class="nav-content">
+            <div class="tannaz-image">
+                <a href="..">
+                    <img src="../assets/tannaz-nav.png" />
+                </a>
             </div>
-            <a class="next-page" href="../video/">
+            <ul class="menu">
+                <li><a href="..">Works</a></li>
+                <li><a href="../about">About</a></li>
+                <li><a href="../resume/TannazSadeghi-Resume.pdf" target="_blank">Resume</a> </li>
+            </ul>
+        </div>
+    </nav>
+
+
+    <main>
+        <article class="work-article padding-bottom-40">
+            <h2>Introduction</h2>
+            <p class="work-text">
+                Snapp! is known as the Uber of Iran with more than 2 million rides per day and 30 million users. The company is the largest and fastest growing internet company in the Middle East.
+                <br/>
+                <br/> Missions were added to Snapp to reduce the cost of retention campaigns, enhance engagement, and increase the usage of our product.
+            </p>
+        </article>
+        <div class="back-gray">
+            <article class="work-article">
+                <h2>Problem Statement</h2>
+                <p class="work-text">In the Coronavirus pandemic, our ride requests plummeted down so much that we couldn’t give away the normal vouchers like we used to because of the cost for the company. Aside from the cost, they wouldn’t bring loyalty and engagement from
+                    our users, so we had to make more efficient vouchers.
+                </p>
+            </article>
+            <div class="work-image">
+                <img src="../assets/vouchers/icon-problem.svg" id="problem" alt="Problem Icon" />
+            </div>
+        </div>
+        <div class="back-black padding-bottom-55">
+            <article class="work-article">
+                <h2>Solution</h2>
+                <p class="work-text-normal">We came up with three types of vouchers with gamification.
+                </p>
+                <br/>
+                <ul>
+                    <li><strong>Target Based Vouchers</strong> <br/> A new type of conditional voucher that passengers must take rides with some conditions like service type, deadline time, etc. After meeting the target, the reward voucher code will be unlocked
+                        for the passenger and they can start using the code.
+                    </li>
+                    <br/>
+                    <li><strong>Direct Discount Vouchers</strong> <br/> It’s an alternative for cashback functionality that passengers redeem a code and get the reward discount in their next ride directly.
+                    </li>
+                    <br>
+                    <li><strong>Compound Vouchers</strong><br/> A promotion code with different discount values based on the time of code redemption.
+                    </li>
+                </ul>
+
+            </article>
+        </div>
+        <div class="back-white padding-bottom-0">
+            <article class="work-article">
+                <h2>Final Designs</h2>
+                <p class="work-text-normal">
+                    For the designs, since we had vouchers before, I tried to keep them as simple and similar to that of previous designs so it would seem familiar to the users.
+                </p>
+            </article>
+            <div class="work-image-normal margin-top-29">
+                <img src="../assets/vouchers/target-based.png" alt="Target Based Vouchers" />
+            </div>
+            <div class="work-image-normal margin-top-0">
+                <img src="../assets/vouchers/direct-discount.png" alt="Direct Discount Vouchers" />
+            </div>
+            <div class="work-image-normal margin-top-0">
+                <img src="../assets/vouchers/compound.png" alt="Compound Vouchers" />
+            </div>
+            <div class="work-image-normal margin-top-0">
+                <img src="../assets/vouchers/empty.png" alt="Empty State" />
+            </div>
+        </div>
+        <div class="back-white padding-bottom-49">
+            <article class="work-article last-work-article">
+                <h2>Results</h2>
+                <p class="work-text-normal">
+                    Based on our A/B tests, these mission-type vouchers have reduced the cost of the normal vouchers, and it has increased the conversion rate.
+                    <br/> <br/> Also, they brought back the daily rides count to its value before the pandemic and increased retention.
+                    <br /><br /> We ran a survey after releasing these vouchers the results showed that a good number of users copy the voucher code from their SMS messages. To fix this issue we’re planning to bring the missions in our Loyalty Club, and
+                    place a button in the checkout funnel to show active voucher codes from there. <br />
+                </p>
+            </article>
+        </div>
+        <div class="pagination">
+            <div class="pagination-content">
+                <a class="prev-page" href="../chat/">
+                    <div class="arrow">
+                        <div></div>
+                        <div></div>
+                    </div>
+                    Snapp! Chat Module Feature
+                </a>
+
+                <div class="padding"></div>
+
+                <a class="next-page" href="../video/">
                 Cafe Bazaar Video Service
                 <div class="arrow">
                     <div></div>
                     <div></div>
                 </div>
             </a>
+            </div>
         </div>
-    </div>
-</main>
+    </main>
 
-<footer>
-    <div class="footer-content">
-        <div>© 2021 Tannaz Sadeghi</div>
-        <div class="padding"></div>
-        <div class="social">
-            <a href="mailto:tz.sadeghi95@gmail.com" target="_blank"><img src="../assets/icons/icon-mail.svg" alt="mail"/></a>
-            <a href="https://www.linkedin.com/in/tannazsadeghi/" target="_blank"><img src="../assets/icons/icon-linkedin.svg" alt="linkedin"/></a>
-            <a href="https://dribbble.com/tannazsadeghi" target="_blank"><img src="../assets/icons/icon-dribbble.svg" alt="dribble"/></a>
-            <a href="https://www.behance.net/tannazsadeghi" target="_blank"><img src="../assets/icons/icon-behance.svg" alt="behance"/></a>
-            <a href="https://www.instagram.com/tz.sadeghi/" target="_blank"><img src="../assets/icons/icon-instagram.svg" alt="instagram"/></a>
+    <footer>
+        <div class="footer-content">
+            <div>© 2021 Tannaz Sadeghi</div>
+            <div class="padding"></div>
+            <div class="social">
+                <a href="mailto:tz.sadeghi95@gmail.com" target="_blank"><img src="../assets/icons/icon-mail.svg" alt="mail" /></a>
+                <a href="https://www.linkedin.com/in/tannazsadeghi/" target="_blank"><img src="../assets/icons/icon-linkedin.svg" alt="linkedin" /></a>
+                <a href="https://dribbble.com/tannazsadeghi" target="_blank"><img src="../assets/icons/icon-dribbble.svg" alt="dribble" /></a>
+                <a href="https://www.behance.net/tannazsadeghi" target="_blank"><img src="../assets/icons/icon-behance.svg" alt="behance" /></a>
+                <a href="https://www.instagram.com/tz.sadeghi/" target="_blank"><img src="../assets/icons/icon-instagram.svg" alt="instagram" /></a>
+            </div>
         </div>
-    </div>
-    <a class="top-link" href="#top">
-        <div class="arrow">
-            <div></div>
-            <div></div>
-        </div>
-        <div class="link">
-            Top
-        </div>
-    </a>
-</footer>
-<script src="../js/script.js"></script>
+        <a class="top-link" href="#top">
+            <div class="arrow">
+                <div></div>
+                <div></div>
+            </div>
+            <div class="link">
+                Top
+            </div>
+        </a>
+    </footer>
+    <script src="../js/script.js"></script>
 </body>
+
 </html>
