--- a/change-dest/index.html
+++ b/change-dest/index.html
@@ -42,15 +42,19 @@
         </div>
     </nav>
 
-
     <main>
-        <article class="work-article padding-bottom-40">
+        <article class="work-article padding-bottom-40" id="change-dest-intro">
             <h2>Introduction</h2>
             <p class="work-text">
-                Snapp! is known as the Uber of Iran with more than 2 million rides per day and 30 million users. The company is the largest and fastest growing internet company in the Middle East.
+                Snapp! is known as the Uber of Iran with more than 2 million rides per day and 30 million users. The company is the largest and fastest growing internet company in the Middle East.<br/>
+                Change destination is a feature that enables users to change where they are going when their ride has already started and the driver has accepted the ride request
+            </p>
+            <h2>My Role</h2>
+            <p class="work-text">
+                Based on the number of complaints, I prioritized the problems to bring them to the product roadmap. Changing destinations mid-trip was one of the major ones. In order to get some insight, I conducted a survey and began working with the Product Manager.<br/>
                 <br/>
-                <br/> Change destination is a feature that enables users to change where they are going when their ride has already started and the driver has accepted the ride request. <br/> In this presentation, we are going through the process of coming
-                up with the idea, noticing the problem, and finding a solution for it.</p>
+                In addition, I worked alongside Client and Backend Developers and our Call Center members.
+            </p>
         </article>
         <div class="back-gray">
             <article class="work-article">
@@ -163,5 +167,4 @@
     </footer>
     <script src="../js/script.js"></script>
 </body>
-
 </html>
