Update change destination

--- a/change-dest/index.html
+++ b/change-dest/index.html
@@ -43,25 +43,29 @@
     </nav>
 
     <main>
-        <article class="work-article padding-bottom-40" id="change-dest-intro">
-            <h2>Introduction</h2>
-            <p class="work-text">
-                Snapp! is known as the Uber of Iran with more than 2 million rides per day and 30 million users. The company is the largest and fastest growing internet company in the Middle East.<br/>
-                Change destination is a feature that enables users to change where they are going when their ride has already started and the driver has accepted the ride request
-            </p>
-            <h2>My Role</h2>
-            <p class="work-text">
-                Based on the number of complaints, I prioritized the problems to bring them to the product roadmap. Changing destinations mid-trip was one of the major ones. In order to get some insight, I conducted a survey and began working with the Product Manager.<br/>
-                <br/>
-                In addition, I worked alongside Client and Backend Developers and our Call Center members.
-            </p>
-        </article>
+        <div class="work-article-back">
+            <article class="work-article padding-bottom-150">
+                <h2>Introduction</h2>
+                <p class="work-text">
+                    Snapp! is known as the Uber of Iran with more than 2 million rides per day and 30 million users. The company is the largest and fastest growing internet company in the Middle East.<br/>
+                    Change destination is a feature that enables users to change where they are going when their ride has already started and the driver has accepted the ride request
+                </p>
+                <h2>My Role</h2>
+                <p class="work-text">
+                    Based on the number of complaints, I prioritized the problems to bring them to the product roadmap. Changing destinations mid-trip was one of the major ones. In order to get some insight, I conducted a survey and began working with the Product Manager.<br/>
+                    <br/>
+                    In addition, I worked alongside Client and Backend Developers and our Call Center members.
+                </p>
+            </article>
+        </div>
+
         <div class="back-gray">
             <article class="work-article">
                 <h2>Problem Statement</h2>
-                <p class="work-text">Every day ~2K of the calls to our Call Center (CC) were about users wanting to change their destination. The number of calls informed us about this problem and we decided to run a survey. <br/>
-                    <br/> We ran the survey and from the reported results, we found out that 14% of the rides requested destination change mid-trip. 30% of them used one of our Ride Options which is adding a Second Destination, 26% asked the driver and
-                    negotiated a price, 20% did nothing and finished their ride, 9% asked the drivers but they didn’t accept to change their destination, and 7% called CC.
+                <p class="work-text">
+                    Every day ~2K of the calls to our Call Center (CC) were about users wanting to change their destination. Based on the number of calls, we decided to conduct a survey.<br/>
+                    <br/>
+                    The survey revealed that 14% of the rides requested a change of destination mid-trip based on the results. Among them, 30% used one of our Ride Options, which was adding a Second Destination, 26% negotiated with the driver, 20% stayed put and completed their ride, 9% asked the drivers but they wouldn't change their destination, and 7% called CC.
                 </p>
             </article>
             <div class="work-image">
@@ -72,29 +76,30 @@
             <article class="work-article">
                 <h2>Solution</h2>
                 <p class="work-text-normal">
-                    To answer the users’ needs, we came up with the Change Destination feature in the Passenger application. We started by benchmarking international ride hailing applications and drawing the flow and specified the touchpoints.
+                    With the Change Destination feature, we came up with a way to meet our users' needs. As a first step, we benchmarked international ride hailing applications, drew the flow, and defined the touchpoints.
                 </p>
             </article>
             <div class="work-image-normal">
                 <img src="../assets/change-dest/flowchart.png" alt="Wireframe images" />
             </div>
         </div>
-        <div class="back-gray">
+        <div class="back-gray padding-bottom-0">
             <article class="work-article">
-                <h2>Wireframes</h2>
+                <h2>Exploration</h2>
                 <p class="work-text-normal">
-                    After finishing the flow and having an overall understanding of what the vision was, I started wire-framing. &nbsp;
+                    After finishing the flow and having an overall understanding of what the vision was, I started designing. Once the iterations were complete, we had a meeting with our development team to see if there were any tradeoffs or constraints.
                 </p>
             </article>
             <div class="work-image-normal">
-                <img src="../assets/change-dest/wireframe.png" alt="Pie chart showing survery results" />
+                <img src="../assets/change-dest/exploration.png" alt="Pie chart showing survery results" />
             </div>
         </div>
         <div class="back-white padding-bottom-0">
             <article class="work-article">
-                <h2>Final design</h2>
+                <h2>Final Design</h2>
                 <p class="work-text-normal">
-                    After a lot of iterations, the designs were final and it was time to have a demo session for our development team. After the session, I modified some of the designs and we had them ready to be implemented.
+                    We chose these designs based on the insights gathered from the survey. Since most of our users added second destination from the Ride Options, adding this feature there would be noticeable when they used it.<br/>
+                    In the second case, we were showing the addresses to users, so it was natural that they may want to change it from there.
                 </p>
             </article>
             <div class="work-image-normal">
@@ -103,7 +108,7 @@
         </div>
         <div class="back-gray">
             <article class="work-article">
-                <h2>Final design in flow</h2>
+                <h2>Final Design in Flow</h2>
             </article>
             <div class="work-image-normal">
                 <img src="../assets/change-dest/design-in-flowchart.png" alt="Final design in flow images" />
@@ -113,7 +118,7 @@
             <article class="work-article">
                 <h2>Results</h2>
                 <p class="work-text-normal">
-                    We ran a survey again after releasing Change Destination to check both accessibility and usability. The results were positive and it scored a total of 91% for accessibility and usability, and 79% for driver awareness of this feature.<br/>                    Also, we checked our CC calls regarding change destination requests and it has reduced the calls.
+                    The daily usage, conversion rate, and reduction of CC calls were the metrics we used to measure the success of this feature. Up to now, 2% of our daily rides are using Change Destination, our conversion rate is over 70%, and our CC calls has reduced by approximately 40%.
                 </p>
             </article>
             <div class="work-image">
